bitfield/tests/fail/bad-base-type-1.rs
use bitfield::bitfield;

bitfield! {
    struct Bitfield: str {
        
    }
}

fn main() {
    
}
